# VideoNews

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Example.config.py  Makefile  README.md  _check_bot.py  _check_config.py  _check_db.py  _check_db2.py  _check_debug.py  _check_errors.py  _check_logs.py  _check_pipeline.py  _check_stdout.py  _e2e_dryrun.py  _e2e_test.py  _launch_bot.py  _subs.srt  _temp_subs.srt  _test_bot.py  _test_bot2.py  _test_bot3.py  _test_encoding.py  _test_get_updates.py  _test_minibot.py  _test_pipeline.py  _watch_bot.py  bootstrap.ps1  elevenlabsaccounts.payload.json  main.py  news_video_processor.py  pipeline_config.json  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.txt  (+8 more)
bot/: config.py  config_bridge.py  dispatcher.py  health.py  main.py
bot/handlers/: error_handler.py  news_handler.py  settings_handler.py  utility_handler.py
bot/services/: news_service.py  settings_service.py  video_service.py
bot/utils/: message_sender.py  retry_utils.py
docs/: AI.md  API.md  DATABASE.md  PIPELINE.md
metrics/: ShortFormPipeline.json
presentation/: config_editor.py
scripts/: __init__.py  article_generator.py  config_validator.py  dashboard.py  factory.py  flux_image_generator.py  interfaces.py  long_video_compiler.py  monitoring.py  news_api_client.py  pexels_media_fetcher.py  pipeline.py  run_dashboard.py  subtitle_and_voice.py  tiktok_uploader.py  tts_elevenlabs.py  twitter_trending.py  video_assembler.py  video_uploader.py  youtube_uploader.py
scripts/AI/: natural_language_generation.py  speech_to_text.py  text_to_image.py  text_to_speech.py  tts_voice_cloner.py
scripts/DataFetcher/: currents_api_client.py  interfaces.py  news_aggregator.py  news_api_client.py  news_extractor.py  news_mapper.py  serpapi_client.py  viral_news_agent.py
scripts/IA/: natural_language_generation.py  text_to_image.py  text_to_speech.py
scripts/MediaManagers/: SRT_Processor.py  audio_manager.py  image_manager.py  media_manager.py  subtitle_manager.py  video_composer.py  video_manager.py  word_level_subtitles.srt
scripts/Uploaders/: tiktok_uploader.py  youtube_uploader.py
scripts/dbControllers/: processed_news_controller.py  user_controller.py
scripts/helpers/: media_helper.py
scripts/services/: cache_service.py  media_service.py  news_service.py  storage_service.py  subtitle_service.py  tiktok_uploader.py  tts_service.py  video_assembler.py  youtube_uploader.py
scripts/utils/: app_logger.py  container.py  file_cache.py  progress_tracker.py  rate_limiter.py  retry.py
src/: audio_generator.py  text_generator.py  tiktok_uploader.py  twitter_api.py  video_creator.py  youtube_uploader.py
tests/: conftest.py
